--- a/filo/formats/zip.yaml
+++ b/filo/formats/zip.yaml
@@ -10,6 +10,7 @@ extensions:
 description: "ZIP archive format"
 references:
   - "https://pkware.cachefly.net/webdocs/casestudies/APPNOTE.TXT"
+extraction: "unzip file.zip"
 
 signatures:
   - offset: 0
